fix spacing for todo sections

--- a/style/todo.css
+++ b/style/todo.css
@@ -47,7 +47,7 @@
 	flex-direction: column;
 	flex: 0;
 	margin-top: 1rem;
-	padding: 0.25rem 0.5rem;
+	padding: 0.25rem 0.5rem 0.25rem 0;
 	border-radius: 10px;
 }
 
